custom field improvements
makes it possible to build custom fields that return scalars

+ adds a test since none of this logic was tested yet

--- a/internal/tscode/loadAny.tmpl
+++ b/internal/tscode/loadAny.tmpl
@@ -1,8 +1,8 @@
 {{ reserveImport "./const" "NodeType"}}
 {{ reserveImport .Package.PackagePath "loadEnt" "loadEntX" "ID" "Viewer" "Ent" "LoadEntOptions"}}
-{{ $internalImpPath := .Package.InternalImportPath }}
+{{ $impPath := .Package.ExternalImportPath }}
 {{ range .NodeData -}}
-  {{ reserveImport $internalImpPath .Name}}
+  {{ reserveImport $impPath .Name}}
 {{ end -}}
 
 export async function loadEntByType(
