add the node in the generated placeholderID to help with debugging if there are issues

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -53,7 +53,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     action: {{.Node}}Action,
     public readonly existingEnt?: {{$node}} | undefined,
   ) {
-    this.placeholderID = `$ent.idPlaceholderID$ ${randomNum()}`;
+    this.placeholderID = `$ent.idPlaceholderID$ ${randomNum()}-{{$node}}`;
     this.input = action.getInput();
 
     this.orchestrator = new {{useImport "Orchestrator"}}({
